--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Oksana Liuklian <lyuklyan4@icloud.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "izitoast": "^1.4.0",
     "loaders.css": "^0.1.2",
